# gh-author-inspect

./: pyproject.toml  readme.md
src/gh_author_inspect/: cli.py  queries.py  utils.py
src/gh_author_inspect/query_templates/: discussion_author.graphql  discussion_commenter.graphql  issue_author.graphql  issue_commenter.graphql  user_basic.graphql
